--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "dev": "yarn electron:serve"
   },
   "main": "background.js",
   "dependencies": {
     "@types/electron-devtools-installer": "^2.2.0",
+    "@types/node": "^12.12.50",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
